using UnityEngine;
using UnityEngine.InputSystem;

public class PlayerController : MonoBehaviour
{
    [Header("Movement Settings")]
    [SerializeField] private float moveSpeed = 5f;
    [SerializeField] private float runSpeedMultiplier = 1.5f;

    [Header("Components")]
    private Rigidbody2D rb;
    private Animator animator;
    private SpriteRenderer spriteRenderer;

    // Input
    private Vector2 moveInput;
    private bool isRunning;
    private bool wasMoving;

    // Animation parameters (theo h∆∞·ªõng d·∫´n README: 4 parameters)
    private readonly int moveXHash = Animator.StringToHash("MoveX");
    private readonly int moveYHash = Animator.StringToHash("MoveY");
    private readonly int isMovingHash = Animator.StringToHash("IsMoving");  // Hash ID ƒë·ªÉ performance t·ªët
    private readonly int speedHash = Animator.StringToHash("Speed");

    // Current animation state (for debugging and clarity)
    private bool currentIsMoving = false;  // Gi√° tr·ªã bool th·ª±c t·∫ø c·ªßa IsMoving

    private void Awake()
    {
        rb = GetComponent<Rigidbody2D>();
        animator = GetComponent<Animator>();
        spriteRenderer = GetComponent<SpriteRenderer>();

        // Immediate fix for common setup issues
        FixCommonIssues();
    }

    private void FixCommonIssues()
    {
        // Fix 1: Ensure Rigidbody2D is properly configured
        if (rb != null)
        {
            rb.gravityScale = 0f;           // Top-down game
            rb.freezeRotation = true;       // Prevent spinning
            rb.collisionDetectionMode = CollisionDetectionMode2D.Continuous;
            Debug.Log("‚úÖ PlayerController: Fixed Rigidbody2D settings");
        }

        // Fix 2: Handle Animator issues
        if (animator != null)
        {
            if (animator.runtimeAnimatorController == null)
            {
                Debug.LogWarning("‚ö†Ô∏è PlayerController: No Animator Controller assigned, disabling Animator");
                animator.enabled = false;
            }
            else
            {
                Debug.Log("‚úÖ PlayerController: Animator Controller found");
                // Simply check if controller exists - don't access parameters
                Debug.Log("‚úÖ PlayerController: Animator Controller is valid");
            }
        }

        // Fix 3: Ensure Player tag
        if (!gameObject.CompareTag("Player"))
        {
            gameObject.tag = "Player";
            Debug.Log("‚úÖ PlayerController: Set GameObject tag to 'Player'");
        }
    }

    private void Start()
    {
        // Setup Rigidbody2D for top-down movement
        if (rb != null)
        {
            rb.gravityScale = 0f;
            rb.freezeRotation = true;
            Debug.Log("‚úÖ PlayerController: Rigidbody2D configured for top-down movement");
        }

        // T·∫°m th·ªùi disable Animator ƒë·ªÉ tr√°nh l·ªói
        if (animator != null && animator.runtimeAnimatorController == null)
        {
            animator.enabled = false;
            Debug.Log("‚ö†Ô∏è PlayerController: Animator disabled (no controller assigned)");
        }

        // Debug components
        Debug.Log($"PlayerController Start - rb: {rb != null}, animator: {animator != null && animator.enabled}, spriteRenderer: {spriteRenderer != null}");
        Debug.Log("üéÆ Use WASD or Arrow Keys to move the player!");
    }

    private void FixedUpdate()
    {
        HandleMovement();
    }

    private void Update()
    {
        HandleInput();

        // Ch·ªâ update animations n·∫øu animator ƒë√£ ƒë∆∞·ª£c setup ƒë√∫ng c√°ch
        if (animator != null && animator.enabled && animator.runtimeAnimatorController != null)
        {
            UpdateAnimations();
        }

        HandleSpriteFlipping();
    }

    private void HandleInput()
    {
        // Input System m·ªõi (n·∫øu c√≥)
        if (Keyboard.current != null)
        {
            Vector2 input = Vector2.zero;

            if (Keyboard.current.wKey.isPressed || Keyboard.current.upArrowKey.isPressed)
                input.y = 1;
            if (Keyboard.current.sKey.isPressed || Keyboard.current.downArrowKey.isPressed)
                input.y = -1;
            if (Keyboard.current.aKey.isPressed || Keyboard.current.leftArrowKey.isPressed)
                input.x = -1;
            if (Keyboard.current.dKey.isPressed || Keyboard.current.rightArrowKey.isPressed)
                input.x = 1;

            moveInput = input.normalized;
            isRunning = Keyboard.current.leftShiftKey.isPressed || Keyboard.current.rightShiftKey.isPressed;
        }
        else
        {
            // Fallback to old Input Manager
            float horizontal = Input.GetAxisRaw("Horizontal"); // A/D ho·∫∑c Left/Right arrows
            float vertical = Input.GetAxisRaw("Vertical");     // W/S ho·∫∑c Up/Down arrows

            moveInput = new Vector2(horizontal, vertical).normalized;
            isRunning = Input.GetKey(KeyCode.LeftShift) || Input.GetKey(KeyCode.RightShift);
        }

        // üéØ DEBUG INPUT CHO IsMoving (ch·ªâ khi c√≥ thay ƒë·ªïi):
        // - Khi ƒë·ª©ng y√™n: moveInput = (0,0), magnitude = 0
        // - Khi b·∫•m WASD: moveInput != (0,0), magnitude > 0
        bool currentlyMoving = moveInput.magnitude > 0.1f;

        // Ch·ªâ log khi tr·∫°ng th√°i thay ƒë·ªïi ƒë·ªÉ tr√°nh spam
        if (currentlyMoving != wasMoving)
        {
            if (currentlyMoving)
            {
                Debug.Log($"üéÆ STARTED MOVING - Input: {moveInput}, Magnitude: {moveInput.magnitude:F3}");
            }
            else
            {
                Debug.Log($"‚è∏Ô∏è STOPPED MOVING - Input: {moveInput}, Magnitude: {moveInput.magnitude:F3}");
            }
            wasMoving = currentlyMoving;
        }
    }

    // Input System callbacks (s·∫Ω override HandleInput n·∫øu ƒë∆∞·ª£c s·ª≠ d·ª•ng)
    public void OnMove(InputAction.CallbackContext context)
    {
        moveInput = context.ReadValue<Vector2>();
    }

    public void OnRun(InputAction.CallbackContext context)
    {
        isRunning = context.ReadValueAsButton();
    }

    private void HandleMovement()
    {
        if (rb == null) return;

        float currentSpeed = moveSpeed;
        if (isRunning)
        {
            currentSpeed *= runSpeedMultiplier;
        }

        Vector2 movement = moveInput * currentSpeed;
        rb.linearVelocity = movement;

        // Debug ƒë·ªÉ ki·ªÉm tra input v√† movement
        if (moveInput.magnitude > 0.1f)
        {
            Debug.Log($"Input: {moveInput}, Speed: {currentSpeed}, Velocity: {rb.linearVelocity}");
        }
    }

    private void UpdateAnimations()
    {
        // Triple check ƒë·ªÉ ƒë·∫£m b·∫£o animator ready v√† kh√¥ng g√¢y l·ªói
        if (animator == null || !animator.enabled || animator.runtimeAnimatorController == null)
        {
            return;
        }

        // üéØ LOGIC CH√çNH X√ÅC CHO IsMoving:
        // - Khi ƒë·ª©ng y√™n (kh√¥ng b·∫•m ph√≠m): IsMoving = false
        // - Khi b·∫•m WASD (c√≥ input): IsMoving = true
        bool isMoving = moveInput.magnitude > 0.1f;
        currentIsMoving = isMoving;  // Track current state

        // Debug animation values m·ªói frame ƒë·ªÉ ki·ªÉm tra
        Debug.Log($"üéÆ ANIMATION UPDATE - Input: {moveInput} | Magnitude: {moveInput.magnitude:F3} | IsMoving: {isMoving} | Hash: {isMovingHash}");

        // Ultra-safe parameter setting - theo README: 4 parameters
        try
        {
            // Set movement parameters (theo README) - USE HASH FOR PERFORMANCE
            SetAnimatorParameterSafe(isMovingHash, isMoving);
            SetAnimatorParameterSafe(moveXHash, moveInput.x);
            SetAnimatorParameterSafe(moveYHash, moveInput.y);

            // Calculate current speed - ch·ªâ khi ƒëang moving
            float currentSpeed = isMoving ? moveSpeed : 0f;
            if (isRunning && isMoving)
            {
                currentSpeed *= runSpeedMultiplier;
            }
            SetAnimatorParameterSafe(speedHash, currentSpeed);

            // Debug animation state m·ªói frame ƒë·ªÉ ki·ªÉm tra
            Debug.Log($"üé¨ Animation - IsMoving: {isMoving}, Speed: {currentSpeed}, MoveX: {moveInput.x:F2}, MoveY: {moveInput.y:F2}");
            Debug.Log($"üéØ SPEED TRANSITION - Speed: {currentSpeed} (>0 = Walk, <1 = Idle)");
        }
        catch (System.Exception e)
        {
            Debug.LogWarning($"‚ö†Ô∏è Animation parameter error: {e.Message}");
            Debug.LogWarning("üí° Disabling Animator to prevent further errors. Check Animator Controller parameters.");
            animator.enabled = false; // Disable to prevent further errors
        }
    }

    // Ultra-safe parameter setting method - handle 4 parameters theo README
    private void SetAnimatorParameterSafe(string parameterName, object value)
    {
        if (animator == null || animator.runtimeAnimatorController == null)
            return;

        try
        {
            // Handle 4 parameters theo README: MoveX, MoveY, IsMoving, Speed
            switch (parameterName)
            {
                case "IsMoving":
                    if (value is bool boolValue)
                    {
                        // Test if parameter exists first
                        animator.GetBool(parameterName);
                        animator.SetBool(parameterName, boolValue);
                        Debug.Log($"‚úÖ Set {parameterName} = {boolValue}");
                    }
                    break;
                case "MoveX":
                case "MoveY":
                case "Speed":
                    if (value is float floatValue)
                    {
                        // Test if parameter exists first
                        animator.GetFloat(parameterName);
                        animator.SetFloat(parameterName, floatValue);
                        Debug.Log($"‚úÖ Set {parameterName} = {floatValue:F2}");
                    }
                    break;
            }
        }
        catch (System.Exception e)
        {
            // Parameter doesn't exist - warn user
            Debug.LogError($"‚ùå Parameter '{parameterName}' kh√¥ng t·ªìn t·∫°i! L·ªói: {e.Message}");
            Debug.LogError($"üí° H√£y ch·∫°y 'Tools ‚Üí RPG Tools ‚Üí üöÄ ULTIMATE ANIMATOR FIX' ƒë·ªÉ t·∫°o parameters!");
        }
    }

    // Overload method for HASH-based parameter setting (FASTER PERFORMANCE)
    private void SetAnimatorParameterSafe(int parameterHash, object value)
    {
        if (animator == null || animator.runtimeAnimatorController == null)
            return;

        try
        {
            // Determine parameter type by hash
            if (parameterHash == isMovingHash && value is bool boolValue)
            {
                animator.SetBool(parameterHash, boolValue);
                Debug.Log($"‚úÖ Set IsMoving (hash) = {boolValue}");
            }
            else if ((parameterHash == moveXHash || parameterHash == moveYHash || parameterHash == speedHash) && value is float floatValue)
            {
                animator.SetFloat(parameterHash, floatValue);
                string paramName = parameterHash == moveXHash ? "MoveX" :
                                 parameterHash == moveYHash ? "MoveY" : "Speed";
                Debug.Log($"‚úÖ Set {paramName} (hash) = {floatValue:F2}");
            }
        }
        catch (System.Exception e)
        {
            Debug.LogError($"‚ùå Parameter hash {parameterHash} kh√¥ng t·ªìn t·∫°i! L·ªói: {e.Message}");
            Debug.LogError($"üí° H√£y ch·∫°y 'Tools ‚Üí RPG Tools ‚Üí üöÄ ULTIMATE ANIMATOR FIX' ƒë·ªÉ t·∫°o parameters!");
        }
    }

    private void HandleSpriteFlipping()
    {
        if (spriteRenderer == null) return;

        // Flip sprite d·ª±a tr√™n h∆∞·ªõng di chuy·ªÉn
        if (moveInput.x > 0.1f)
        {
            // Di chuy·ªÉn sang ph·∫£i - sprite g·ªëc
            spriteRenderer.flipX = false;
        }
        else if (moveInput.x < -0.1f)
        {
            // Di chuy·ªÉn sang tr√°i - flip sprite
            spriteRenderer.flipX = true;
        }
        // Kh√¥ng flip khi di chuy·ªÉn l√™n/xu·ªëng ƒë·ªÉ gi·ªØ h∆∞·ªõng hi·ªán t·∫°i
    }

    // Helper method to check if parameter exists (simplified version)
    private bool HasParameter(Animator animator, string paramName)
    {
        if (animator == null || animator.runtimeAnimatorController == null)
            return false;

        // Safe way to check parameters - ch·ªâ check 3 parameters c∆° b·∫£n
        try
        {
            switch (paramName)
            {
                case "IsMoving":
                    animator.SetBool(paramName, animator.GetBool(paramName));
                    return true;
                case "MoveX":
                case "MoveY":
                    animator.SetFloat(paramName, animator.GetFloat(paramName));
                    return true;
                default:
                    return false;
            }
        }
        catch
        {
            return false;
        }
    }

    // Getter methods cho c√°c script kh√°c
    public Vector2 GetMoveInput() => moveInput;
    public bool IsMoving() => moveInput.magnitude > 0.1f;
    public bool IsRunning() => isRunning;
    public bool GetCurrentIsMoving() => currentIsMoving;  // Get current IsMoving state
    public int GetIsMovingHash() => isMovingHash;  // Get the hash ID for debugging

    #region Animation Events (Fix for Animation Event errors)

    /// <summary>
    /// Animation Event function for footstep sounds
    /// Called automatically by Animation Events in Walk animations
    /// </summary>
    public void OnFootstep()
    {
        // Placeholder for footstep sound effect
        // AudioSource.PlayOneShot(footstepSound);
        Debug.Log("ü¶∂ Footstep sound event");
    }

    /// <summary>
    /// Animation Event function for idle breathing
    /// Called automatically by Animation Events in Idle animations
    /// </summary>
    public void OnIdle()
    {
        // Placeholder for idle breathing effect
        Debug.Log("üò¥ Idle breathing event");
    }

    /// <summary>
    /// Generic Animation Event function
    /// Use this if Animation Events have no specific function
    /// </summary>
    public void OnAnimationEvent()
    {
        // Generic animation event handler
        Debug.Log("üé¨ Generic animation event");
    }

    /// <summary>
    /// Animation Event for walk cycle start
    /// </summary>
    public void OnWalkStart()
    {
        Debug.Log("üö∂ Walk animation started");
    }

    /// <summary>
    /// Animation Event for walk cycle end
    /// </summary>
    public void OnWalkEnd()
    {
        Debug.Log("üõë Walk animation ended");
    }

    #endregion

    #region DEBUG METHODS - FORCE TEST IsMoving

    [System.Obsolete("Debug method only")]
    public void ForceTestIsMoving()
    {
        if (animator == null || animator.runtimeAnimatorController == null)
        {
            Debug.LogError("‚ùå NO ANIMATOR CONTROLLER! Run Ultimate Animator Fix first!");
            return;
        }

        Debug.Log("üß™ FORCE TESTING IsMoving parameter...");

        // Test 1: Force set to true
        try
        {
            animator.SetBool("IsMoving", true);
            bool result = animator.GetBool("IsMoving");
            Debug.Log($"üß™ Test 1 - Set IsMoving=true, Got: {result}");
        }
        catch (System.Exception e)
        {
            Debug.LogError($"‚ùå Test 1 failed: {e.Message}");
        }

        // Test 2: Force set to false  
        try
        {
            animator.SetBool("IsMoving", false);
            bool result = animator.GetBool("IsMoving");
            Debug.Log($"üß™ Test 2 - Set IsMoving=false, Got: {result}");
        }
        catch (System.Exception e)
        {
            Debug.LogError($"‚ùå Test 2 failed: {e.Message}");
        }
    }

    // Call this from Console: player.GetComponent<PlayerController>().ForceTestIsMoving()

    #endregion
}
